welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: identifier expected but integer literal found.
  case "0"  => return 10:00
                         ^alarmClock:5: error: identifier expected but integer literal found.
  case "6"  => return 10:00
                         ^alarmClock:6: error: identifier expected but integer literal found.
  case _    => return 7:00 
                        ^alarmClock:12: error: identifier expected but integer literal found.
  case _  => return 10:00 
                       ^